<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <import type="me.bloodybadboy.gamedatabase.Constants"/>

    <import type="me.bloodybadboy.gamedatabase.utils.Utils"/>
    <import type="me.bloodybadboy.gamedatabase.utils.DateUtil"/>

    <variable
        name="game"
        type="me.bloodybadboy.gamedatabase.data.model.Game"
        />
  </data>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/default_space_small"
      android:layout_marginEnd="@dimen/default_space"
      android:layout_marginStart="@dimen/default_space"
      android:layout_marginTop="@dimen/default_space_small"
      android:foreground="?attr/selectableItemBackground"
      app:cardCornerRadius="@dimen/default_card_corner_radius"
      app:cardElevation="@dimen/corner_radius_game_list_item_card"
      app:cardUseCompatPadding="false"
      tools:layoutDirection="ltr"
      >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_game_list_item"
        >

      <ImageView
          android:id="@+id/iv_game_cover"
          android:layout_width="@dimen/default_space_none"
          android:layout_height="@dimen/default_space_none"
          android:contentDescription="@string/a11y_game_cover"
          android:scaleType="fitXY"
          android:transitionName="@string/transition_cover"
          app:imageUrl="@{String.format(Constants.IMAGE_URL_FORMAT, Constants.COVER_SIZE, game.cover.cloudinaryId)}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintDimensionRatio="3:4"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:srcCompat="@tools:sample/backgrounds/scenic"
          />
      <TextView
          android:id="@+id/tv_game_name"
          android:layout_width="@dimen/default_space_none"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/default_space_small"
          android:layout_marginStart="@dimen/default_space_small"
          android:layout_marginTop="@dimen/default_space"
          android:text="@{game.name}"
          android:textAlignment="viewStart"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="@color/grey_800"
          android:transitionName="@string/transition_game_name"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/iv_game_cover"
          app:layout_constraintTop_toTopOf="parent"
          tools:text="@sample/game_names"
          />
      <TextView
          android:id="@+id/tv_game_themes"
          android:layout_width="@dimen/default_space_none"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/default_space_small"
          android:layout_marginStart="@dimen/default_space_small"
          android:layout_marginTop="@dimen/default_space_small"
          android:text="@{Utils.getDisplayableThemeList(game.themes)}"
          android:textAlignment="viewStart"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/iv_game_cover"
          app:layout_constraintTop_toBottomOf="@+id/tv_game_name"
          tools:text="@sample/game_themes"
          />
      <TextView
          android:id="@+id/tv_initial_release_date"
          android:layout_width="@dimen/default_space_none"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/default_space"
          android:layout_marginEnd="@dimen/default_space_small"
          android:layout_marginStart="@dimen/default_space_small"
          android:text="@{DateUtil.getHumanReadableDate(game.firstReleaseDate)}"
          android:textAlignment="viewStart"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          app:layout_constraintBottom_toTopOf="@+id/iv_esrb"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/iv_game_cover"
          tools:text="@tools:sample/date/ddmmyy"
          />
      <ImageView
          android:id="@+id/iv_esrb"
          android:layout_width="@dimen/default_space_large"
          android:layout_height="@dimen/default_space_large"
          android:layout_marginBottom="@dimen/default_space"
          android:layout_marginStart="@dimen/default_space_very_large"
          android:contentDescription="@string/a11y_game_esrb_rating"
          android:scaleType="fitCenter"
          app:imageFromEsrb="@{game.esrb}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@+id/tv_game_rating"
          tools:srcCompat="@drawable/rating_e"
          />
      <TextView
          android:id="@+id/tv_esrb"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/default_space_tiny"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="@color/grey_800"
          app:layout_constraintBottom_toBottomOf="@+id/iv_esrb"
          app:layout_constraintStart_toEndOf="@+id/iv_esrb"
          app:layout_constraintTop_toTopOf="@+id/iv_esrb"
          app:textFromEsrb="@{game.esrb}"
          tools:text="Everyone"
          />
      <ImageView
          android:id="@+id/iv_game_rating"
          android:layout_width="@dimen/default_space_large"
          android:layout_height="@dimen/default_space_large"
          android:layout_marginBottom="@dimen/default_space"
          android:layout_marginStart="@dimen/default_space_small"
          android:contentDescription="@string/a11y_game_rating_bar"
          android:scaleType="fitXY"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@+id/iv_game_cover"
          app:srcCompat="@drawable/ic_rating_star"
          />
      <TextView
          android:id="@+id/tv_game_rating"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/default_space_tiny"
          android:text="@{Utils.getDisplayableRating(game.rating)}"
          android:textColor="@color/grey_800"
          app:layout_constraintBottom_toBottomOf="@+id/iv_game_rating"
          app:layout_constraintStart_toEndOf="@+id/iv_game_rating"
          app:layout_constraintTop_toTopOf="@+id/iv_game_rating"
          tools:text="8.7"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>
</layout>